--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -156,11 +156,11 @@
     <Compile Include="Maps\JYPX\JYPX_ZXXFDBJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_ZXXYDYJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_ZYJNPXJBXX_Map.cs" />
-    <Compile Include="Maps\LYJD\LYJD_CJYJBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_DYDDRBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_GNYJBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_JDZSYDJBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_JPJBXX_Map.cs" />
+    <Compile Include="Maps\LYJD\LYJD_QZFWJBXX_Map.cs" />
     <Compile Include="Maps\LYJD\LYJD_LXSJBXX_Map.cs" />
     <Compile Include="Maps\LR\LR_KQHLJBXX_Map.cs" />
     <Compile Include="Maps\LR\LR_MFHFJBXX_Map.cs" />
@@ -413,11 +413,11 @@
     <Compile Include="Models\LR\LR_WDJBXX.cs" />
     <Compile Include="Models\LR\LR_WSJBXX.cs" />
     <Compile Include="Models\LR\LR_YJJBXX.cs" />
-    <Compile Include="Models\LYJD\LYJD_CJYJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_DYDDRJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_GNYJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_JDZSYDJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_JPJBXX.cs" />
+    <Compile Include="Models\LYJD\LYJD_QZFWJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_LXSJBXX.cs" />
     <Compile Include="Models\LYJD\LYJD_ZBYJBXX.cs" />
     <Compile Include="Models\NLMFY\NLMFY_CQYZJBXX.cs" />
@@ -614,6 +614,7 @@
     <Compile Include="ViewModels\JYPX\JYPX_JJJGView.cs" />
     <Compile Include="ViewModels\JYPX\QZZP_JZZPView.cs" />
     <Compile Include="ViewModels\LR\LR_MTSSView.cs" />
+    <Compile Include="ViewModels\LYJD\LYJD_QZFWView.cs" />
     <Compile Include="ViewModels\LYJD\LYJD_CJYView.cs" />
     <Compile Include="ViewModels\LYJD\LYJD_ZBYView.cs" />
     <Compile Include="ViewModels\LYJD\LYJD_GNYView.cs" />
