--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -233,7 +233,12 @@
     <Content Include="Areas\Business\Css\images\CXLB\cxlb_px_up_orange.png" />
     <Content Include="Areas\Business\Css\images\HTGL\htgl_delete.png" />
     <Content Include="Areas\Business\Css\images\HTGL\htgl_edit.png" />
-    <Content Include="Areas\Business\Css\images\HTGL\htgl_grzl_tx.jpg" />
+    <Content Include="Areas\Business\Css\images\HTGL\htgl_grzl_tx1.png" />
+    <Content Include="Areas\Business\Css\images\HTGL\htgl_grzl_tx2.png" />
+    <Content Include="Areas\Business\Css\images\HTGL\htgl_grzl_tx3.png" />
+    <Content Include="Areas\Business\Css\images\HTGL\htgl_grzl_tx4.png" />
+    <Content Include="Areas\Business\Css\images\HTGL\htgl_grzl_tx5.png" />
+    <Content Include="Areas\Business\Css\images\HTGL\htgl_grzl_tx6.png" />
     <Content Include="Areas\Business\Css\images\info_purple.png" />
     <Content Include="Areas\Business\Css\images\info_blue.png" />
     <Content Include="Areas\Business\Css\images\logo_purple.png" />
