--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -283,7 +283,7 @@
     <Compile Include="Maps\ZSJM\ZSJM_JJHBJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_JXJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_JYPXJBXX_Map.cs" />
-    <Compile Include="Maps\ZSJM\ZSJM_LPXSPJBXX_Map.cs" />
+    <Compile Include="Maps\ZSJM\ZSJM_LPSPJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_MRBJJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_NYJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_QCFWJBXX_Map.cs" />
@@ -531,7 +531,7 @@
     <Compile Include="Models\ZSJM\ZSJM_JJHBJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_JXJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_JYPXJBXX.cs" />
-    <Compile Include="Models\ZSJM\ZSJM_LPXSPJBXX.cs" />
+    <Compile Include="Models\ZSJM\ZSJM_LPSPJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_MRBJJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_NYJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_QCFWJBXX.cs" />
