--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Common\Common.cs" />
     <Compile Include="Enum\XXLB.cs" />
+    <Compile Include="Maps\BZZX\BZZX_TJWT_Map.cs" />
     <Compile Include="Maps\CL\CL_GCCJBXX_Map.cs" />
     <Compile Include="Maps\CL\CL_HCJBXX_Map.cs" />
     <Compile Include="Maps\CL\CL_JCJBXX_Map.cs" />
@@ -297,6 +298,7 @@
     <Compile Include="Maps\ZXJC\ZXJC_JCJBXX_Map.cs" />
     <Compile Include="Maps\ZXJC\ZXJC_JJJBXX_Map.cs" />
     <Compile Include="Maps\ZXJC\ZXJC_JZFWJBXX_Map.cs" />
+    <Compile Include="Models\BZZX\BZZX_TJWT.cs" />
     <Compile Include="Models\CL\CL_GCCJBXX.cs" />
     <Compile Include="Models\CL\CL_HCJBXX.cs" />
     <Compile Include="Models\CL\CL_JCJBXX.cs" />
@@ -504,7 +506,7 @@
     <Compile Include="Models\SWFW\SWFW_ZLJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_ZXFWJBXX.cs" />
     <Compile Include="Models\SZMX.cs" />
-    <Compile Include="Models\BZZX\WZYJ.cs" />
+    <Compile Include="Models\BZZX\BZZX_WZJY.cs" />
     <Compile Include="Models\CODES\CODES_XQJBXX.cs" />
     <Compile Include="Models\CODES\CODES_XXLB.cs" />
     <Compile Include="Models\XXYL\XXYL_DIYSGFJBXX.cs" />
